--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 
 .Dashboard {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: start;
