--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ body {
   color: var(--text-color);
 }
 
-.notification {
+.notification-and-menu {
   width: auto;
   height: auto;
   display: flex;
@@ -358,10 +358,26 @@ body {
   align-items: center;
   font-size: 20px;
   color: var(--light-text-color);
+  column-gap: 1.25rem;
+}
+
+.notification {
   cursor: pointer;
 }
 
 .notification:hover {
+  color: var(--primary-color);
+}
+
+.notification-and-menu .menu {
+  display: none;
+}
+
+.menu {
+  cursor: pointer;
+}
+
+.menu:hover {
   color: var(--primary-color);
 }
 
@@ -750,6 +766,10 @@ body {
 @media screen and (max-width: 870px) {
   .sidebar {
     display: none;
+  }
+
+  .notification-and-menu .menu {
+    display: block;
   }
 
   .Content {
